--- a/calcule.css
+++ b/calcule.css
@@ -1,34 +1,35 @@
-body{
+*{
 	margin: 0;
 	padding: 0;
+}
+
+body{
 	background-image:url("https://cdn.hipwallpaper.com/m/34/97/4HZAoz.jpg");
 	background-repeat: no-repeat;
-	background-size: 100vw 100vh;
-	width: 100%;
+	/* background-size: 100vw 100vh; */
+	background-size: auto;
+	/* width: 100%; */
 	text-align: center;
 }
 
-header{
-	width: 100%;
-	text-align: center;
+#header{
 	font-size: 35px;
 	font-family: fantastic;
-	font-weight: bold;
-	color: crimson;
-	background-image:url("https://cdn.hipwallpaper.com/m/39/24/jnLIuO.jpg");
-	height: auto;
-	padding-top: 7px;
+	font-weight: 900;
+	color: black;
+	padding: 15px ;	
+	background-color: #D4FFFF;
+	/* 1b1919 */
 }
-
 input{
-border: 0.1px solid black;	
-	font-size: 35px;
+	border: 0.1px solid black;	
+	border-radius: 3px;
+	font-size: 26px;
 	font-weight: bold;
-	font-family: Arial;
-	border-radius: 5px;
-	height : 45px;
-	width: 98% ;	
-	margin-top: 5px;
+	height : 25px;
+	width: 84% ;	
+	margin :12px 7px 7px 7px;
+	padding: 10px 10px;
 	background-color: #F1F8F7 ;
 }
 
@@ -36,45 +37,45 @@ button{
 	height: 60px;
 	width : 60px;
 	color: #020202;
-	/*background-color: ;*/
-	font-family: Arial;
-	font-size: 38px;
-	font-weight : bold;
+	/* background-color: ; */
+	border-radius: 10px;
+	font-size: 25px;
+	font-weight : 250;
 	margin : 10px;
 }
 
-.container-calculatrice{
-	border : 1px solid black;
+.cal-container{
+	border-radius: 10px;
+	border : 1px solid rgb(17, 17, 17);
 	height: auto;
 	width: 350px;
 	text-align: center;
 	margin-top: 20px;
+	margin-bottom: 20px;
 	margin-left: auto;
-	margin-right: auto;
-	background-color: white;
+	margin-right: auto; 
+	background-color: white; 
+	position: relative;
 }
 
 #btnTheme ,#btnDrop {
 	width : 138px;
 }
 
-
-
- div span{
-	color : #050E00;
-	font-family: fantastic;
-	text-shadow: 2px 2px #081EDE;
+#footer{
 	font-size: 35px;
+	font-family: fantastic;
+	font-weight: 900;
+	color: black;
+	padding: 15px ;	
+	background-color: #D4FFFF;
 }
 
-.hr2{
- border: 6px dashed #081EDE;
- width: 100px;
-}
 
-/* On screens that are 245px wide or less, the margin of calucator is blue */
+
+/* control the responsivity  */
+/* On screens that are 245px wide or less, the margin of calucator is blue  */
 @media screen and (max-width: 500px) {
-
 
 .container-calculatrice{
 	margin-top: 15%;
@@ -101,13 +102,6 @@ input{
 	width:98% ;	
 	background-color: #F1F8F7 ;
 	margin-top: 2px;
-}
-.hr2{
- border: 10px dashed #081EDE;
- width: auto;
- display: flex;
- left: 0;
- border: 5px;
 }
 
 }
